--- a/portfolio.html
+++ b/portfolio.html
@@ -271,17 +271,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-follow-sub">
+                <h3 class="footer-follow-title">Подпишитесь на рассылку</h3>
+                <div class="form-follow">
+                    <form action="#" class="form-follow-form">
+                        <label for="user-email" class="form-input-label">
+                        </label>
+                        <input type="email" name="footer-user-email" id="user-email" class="footer-form-input" placeholder="E-mail">
+                        <button type="submit" class="footer-follow-btn">
+                            Подписаться
+                            <svg class="follow-sub-icon" width="24px" height="24px">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
+            
+                </div>
         </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-            <button type="button" class="modal-close" data-modal-close>
-                <svg class="modal-close-icon" width=11px height=11px>
-                    <use href="./images/symbol-defs.svg#icon-close"></use>
-                </svg>
-            </button>
-        </div>
-    </div>
-    <script src="./js/modal.js"></script>
 </body>
 </html>
