--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        Соглашаюсь с рассылкой и принимаю
-                        <a href="" class="policy-link"> Условия договора</a>
+                        <span class="checkbox-text">Соглашаюсь с рассылкой и принимаю </span>
+                        <a href="" class="policy-link">  Условия договора</a>
                     </label>
                 </div>
                 <button type="submit" class="modal-button">Отправить</button>
